objects/Supplier__x.object
<CustomObject>
    <externalDataSource>Product_Catalog</externalDataSource>
    <externalName>northwind.supplier</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Companyname__c</fullName>
        <externalDeveloperName>Companyname</externalDeveloperName>
        <label>Company Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contactname__c</fullName>
        <externalDeveloperName>Contactname</externalDeveloperName>
        <label>Contact Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacttitle__c</fullName>
        <externalDeveloperName>Contacttitle</externalDeveloperName>
        <label>Contact Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postalcode__c</fullName>
        <externalDeveloperName>Postalcode</externalDeveloperName>
        <label>Postal Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <externalDeveloperName>Region</externalDeveloperName>
        <label>Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>supplierid__c</fullName>
        <externalDeveloperName>supplierid</externalDeveloperName>
        <label>Supplier ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Supplier</label>
    <pluralLabel>Suppliers</pluralLabel>
</CustomObject>